--- a/index.html
+++ b/index.html
@@ -1,60 +1,63 @@
 <!DOCTYPE html>
-<html lang="en-us" />
+<html lang="en-us">
+    <head>
+        <link rel="stylesheet" href="assets/css/reset.css"/>
+        <link rel="stylesheet" href="assets/css/style.css"/>
+        <meta charset="UTF-8"/>
+        <title>Marlee's Portfolio</title>
+    </head>
 
-<head>
-    <title>About me</title>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8" />
-</head>
-
-<html>
-    <body style="margin:0%;">
-        <!--HEADER-->
-        <div class="b">
-            <header>
-                <h1 class="a">
-                    <span style="background: #88CFEE;">
-                        Marlee Gerard
-                    </span>
-                </h1>
-            </header>
-        </div>
-
-
-        <!--NAV-->
-        <nav>
-
-        </nav>
-
-
-
-        <!--SECTION-->
-        <section class="container1">
-            <article>
-                <h1>About me</h1>
-
-
-                <h2>Random Heading 2</h2>
-
-                <h3>Random heading 3</h3>
-
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit velit laudantium veniam officia quod delectus! Eveniet itaque
-                    rem obcaecati perspiciatis officia facilis consequuntur, quo, fuga eos natus necessitatibus pariatur saepe!
+    <body background="assets/images/what-the-hex.png">
+        <section id="navBar" >        
+                <p id="navTypes" class="para"> 
+                    <a href="index.html">
+                        About | 
+                    </a>
+                    <a href="portfolio.html">                
+                            Portfolio  
+                    </a>
+                        | 
+                    <a href="contact.html">
+                           Contact 
+                    </a>
                 </p>
-            </article>
+            <aside>
+                    <h1 class="heading" id="name">      
+                        Marlee Gerard 
+                    </h1>
+            </aside> 
         </section>
 
-        <!--ASIDE-->
-        <aside>
-            <img src="https://www.google.com/url?sa=i&#38;rct=j&#38;q=&#38;esrc=s&#38;source=images&#38;cd=&#38;cad=rja&#38;uact=8&#38;ved=2ahUKEwip2ZiRxM_bAhUI7awKHXXsDKIQjRx6BAgBEAU&#38;url=https%3A%2F%2Fwww.boredpanda.com%2Ffluffy-cats-funny-animal-pics%2F&#38;psig=AOvVaw35OaK-rh43OXizJcp66OWZ&#38;ust=1528941236006913"
-                alt="Winter Cat" />
-        </aside>
+        <section id="mainContent">
+            <h1 id="heading2" class="heading">
+                About Me
+            </h1>
+            <aside id="bio">
+                <img src="assets/images/IMG_0278.JPG" alt="Random"/>
+                <p class="para" id="bio">
+                        Hello! I am very excited to be able display many projects that I have worked on in my portfolio. 
+                        If you would like to contact me you are more than welcome to do so using the Contact tab. One of my
+                        favorite hobbies are traveling to new places and trying new dishes. During my pasttime I enjoy 
+                        doing hair. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, fugit illum. Deleniti 
+                        esse at deserunt eos possimus a tempora saepe omnis aliquid. Veniam molestiae fugit itaque accusantium qui nobis mollitia?
+                        Hello! I am very excited to be able display many projects that I have worked on in my portfolio. 
+                        If you would like to contact me you are more than welcome to do so using the Contact tab. One of my
+                        favorite hobbies are traveling to new places and trying new dishes. During my pasttime I enjoy 
+                        doing hair. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, fugit illum. Deleniti 
+                        esse at deserunt eos possimus a tempora saepe omnis aliquid. Veniam molestiae fugit itaque accusantium qui nobis mollitia?
+                        Hello! I am very excited to be able display many projects that I have worked on in my portfolio. 
+                        If you would like to contact me you are more than welcome to do so using the Contact tab. One of my
+                        favorite hobbies are traveling to new places and trying new dishes. During my pasttime I enjoy 
+                        doing hair. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, fugit illum. Deleniti 
+                        esse at deserunt eos possimus a tempora saepe omnis aliquid. Veniam molestiae fugit itaque accusantium qui nobis mollitia?
+                </p>    
+            </aside>
+        </section>
 
-
-        <!--FOOTER-->
-        <footer>
-            copyright &#169;
-        </footer>
+        <section id="footer">
+            <div>
+                copyright &copy;
+            </div>
+        </section>
     </body>
 </html>
