New CSS changes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta charset="UTF-8"/>
         <title>Marlee's Portfolio</title>
     </head>
-
-    <body background="assets/images/what-the-hex.png">
+    
+    <body>
         <section id="navBar" >        
                 <p id="navTypes" class="para"> 
                     <a href="index.html">
