--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <h1 id="heading2" class="heading">
                 About Me
             </h1>
-            <aside id="bio">
+            <aside class="bio">
                 <img src="assets/images/IMG_0278.JPG" alt="Random"/>
-                <p class="para" id="bio">
+                <p class="para bio">
                         Hello! I am very excited to be able display many projects that I have worked on in my portfolio. 
                         If you would like to contact me you are more than welcome to do so using the Contact tab. One of my
                         favorite hobbies are traveling to new places and trying new dishes. During my pasttime I enjoy 
