--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Another Index</title>
+        <title>About Me</title>
     </head>
 
     <body>
@@ -19,9 +19,9 @@
 
         <nav class="navBar">
             <div>
-                <p class="navType ">About
-                    <span style="color:#dddddd;">|</span> Portfolio
-                    <span style="color:#dddddd;">|</span> Contact</p>
+                <p class="navType "><a href="index.html">About</a>
+                    <span style="color:#dddddd;">|</span> <a href="portfolio.html">Portfolio</a>
+                    <span style="color:#dddddd;">|</span> <a href="contact.html">Contact</a></p>
             </div>
         </nav>
 
