--- a/portfolio.html
+++ b/portfolio.html
@@ -1,44 +1,55 @@
 <!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <link rel="stylesheet" href="assets/css/reset.css"/>
-        <link rel="stylesheet" href="assets/css/style.css"/>
-        <meta charset="UTF-8"/>
-        <title>Marlee's Portfolio</title>
-    </head>
+<html>
 
-    <body>
-        <section id="navBar" >        
-                <p id="navTypes" class="para"> 
-                    <a href="index.html">
-                        About | 
-                    </a>
-                    <a href="portfolio.html">                
-                            Portfolio  
-                    </a>
-                        | 
-                    <a href="contact.html">
-                           Contact  
-                    </a>
-                </p>
-            <aside>
-                    <h1 class="heading" id="name">
-                        Marlee Gerard  
-                    </h1>
-            </aside> 
-        </section>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
 
-        <section id="mainContent">
-            <h1 id="heading2" class="heading">
-                Portfolio
-            </h1>
-        </section>
+<body>
+    <!-- Header -->
+    <header>
+        <div class="name">
+            <h1>Marlee Gerard</h1>
+        </div>
+    </header>
 
-        <section id="footer">
-            <div>
-                copyright &copy;
+
+    <nav class="navBar">
+        <div>
+            <p class="navType ">
+                <a href="index.html">About</a>
+                <span style="color:#dddddd;">|</span>
+                <a href="portfolio.html">Portfolio</a>
+                <span style="color:#dddddd;">|</span>
+                <a href="contact.html">Contact</a>
+            </p>
+        </div>
+    </nav>
+
+    <section>
+        <!-- main content heading-->
+        <div class="container main-content main-space">
+            <div class="row">
+                <div class="col heading2">
+                    <h2>
+                        Portfolio
+                    </h2>
+                </div>
             </div>
-        </section>
-        
-    </body>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <div class="row">
+        <footer>
+            copyright&copy;
+        </footer>
+    </div>
+
+</body>
+
 </html>
