--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
@@ -44,15 +44,15 @@
                     <form action="#" class="inputs">
                         Name
                         <br>
-                        <input type="text" class="input" name="firstname" placeholder="John Smith" size="111" style="height:20px">
+                        <input type="text" class="input" name="firstname" placeholder="John Smith" size="111" style="height:27px"><br>
                         <br>
-                        <br> Email
+                         Email
                         <br>
-                        <input type="text" class="input" name="email" placeholder="example@gmail.com" size="111" style="height:20px">
+                        <input type="text" class="input" name="email" placeholder="example@gmail.com" size="111" style="height:27px">
                         <br>
                         <br> Message
                         <br>
-                        <input type="text" class="input" name="message" size="111" style="height:170px">
+                        <input type="text" class="input" name="message" size="111" style="height:170px;">
                         <br>
                         <br>
                         <input type="submit" value="Submit" class="submit">
