--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
@@ -38,6 +39,14 @@
                     <h2>
                         Portfolio
                     </h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-3">
+                    <div id="trivia_game">
+                        <a href="#" id="trivia_game_link"> Disney Trivia Game</a>
+                    </div>
                 </div>
             </div>
         </div>
