--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div id="trivia_game">
-                        <a href="#" id="trivia_game_link"> Disney Trivia Game</a>
+                        <a href="https://marleeg.github.io/TriviaGame/" id="trivia_game_link"> Disney Trivia Game</a>
                     </div>
                 </div>
             </div>
