--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,9 @@
                     <div id="trivia_game">
                         <a href="https://marleeg.github.io/TriviaGame/" target="_blank"> Disney Trivia Game</a>
                     </div>
+                    <div id="giphtastic">
+                        <a href="https://marleeg.github.io/GifTastic/" target="_blank"> Giphy Time</a>
+                    </div>
                 </div>
             </div>
         </div>
